# stacker_cookiecutter

./: .gitignore  LICENSE  cookiecutter.json  readme.rst
{{cookiecutter.repo_name}}/: Dockerfile  Makefile  Pipfile  pyproject.toml  readme.rst  setup.py  stacker.yaml  {{cookiecutter.repo_name}}.yaml
{{cookiecutter.repo_name}}/blueprints/: touch.py
{{cookiecutter.repo_name}}/conf/: dev.env  prod.env
{{cookiecutter.repo_name}}/conf/{{cookiecutter.repo_name}}/: dev.env  prod.env
{{cookiecutter.repo_name}}/tests/blueprints/: test_touch.py
{{cookiecutter.repo_name}}/tests/fixtures/blueprints/: test_touch.json
