[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "*"
stacker_blueprints = { git = "https://github.com/cloudtools/stacker_blueprints.git" }

[tool.poetry.dev-dependencies]
nose = "^1.3"
mock = "^2.0"
flake8 = "^3.5"
